# datemangler

./: .gitignore  Dockerfile  LICENSE  README.md  README.rst  date-mangler  pyproject.toml  setup.py  test.py  test.sh
datemangler/: __init__.py  __main__.py  datemangler.py
