[project]
name = "datemangler"
description = "This script modifies the last four bits of an NTFS timestamp to hide information."
keywords = ["NTFS", "encryption", "stenography", "hidden", "AES"]
version = "0.3.0"
requires-python = ">=3.11"
authors = [
    { name = "Stephan Klein" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities"
]
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "xattr",
    "cryptography",
]

[project.urls]
Repository = "https://github.com/privatwolke/datemangler"
Issues = "https://github.com/privatwolke/datemangler/issues"

[project.scripts]
datemangler = "datemangler.__main__:main"

[build-system]
requires = [
    "setuptools",
]